Consistent translation for "Save passwords"

--- a/fr/suite/chrome/common/help/passwords_help.xhtml
+++ b/fr/suite/chrome/common/help/passwords_help.xhtml
@@ -82,8 +82,7 @@
   <p>Le gestionnaire de mots de passe vous permet de&nbsp;:</p>
 
   <dl>
-    <dt>Se rappeler des mots de passe pour les sites qui en
-    demandent&nbsp;:</dt>
+    <dt>Enregistrer les mots de passe&nbsp;:</dt>
 
     <dd>Cochez cette case pour activer le gestionnaire de mots de passe, pour
     qu'il vous demande d'enregistrer vos noms d'utilisateur et mots de passe
@@ -91,7 +90,7 @@
     besoin. Pour d&eacute;sactiver le gestionnaire de mots de passe,
     d&eacute;cochez cette case.</dd>
 
-    <dt>Voir la liste des mots de passe stock&eacute;s&nbsp;:</dt>
+    <dt>G&eacute;rer les mots de passe enregistr&eacute;s&nbsp;:</dt>
 
     <dd>Cliquez sur ce bouton pour g&eacute;rer les informations concernant vos
     mots de passe enregistr&eacute;s et les sites pour lesquels vous ne voulez
