--- a/fr/suite/chrome/common/help/using_priv_help.xhtml
+++ b/fr/suite/chrome/common/help/using_priv_help.xhtml
@@ -989,7 +989,7 @@
   <p>Le nom d'utilisateur et le mot de passe que vous utilisez sur un site
   particulier peuvent &ecirc;tre lus par son administrateur. Si cela vous
   g&ecirc;ne, vous pouvez utiliser un mot de passe diff&eacute;rent pour chaque
-  site. Malheureusement, il est tr&egrave;s difficile de se rappeler de tous
+  site. Malheureusement, il est tr&egrave;s difficile de se souvenir de tous
   les mots de passe que vous utilisez.</p>
 
   <p>Le gestionnaire de mots de passe peut vous aider en enregistrant vos noms
@@ -1150,9 +1150,8 @@
     d&eacute;velopper la liste.</li>
 
     <li>Dans la section <q>Gestionnaire des mots de passe</q>,
-    d&eacute;s&eacute;lectionnez <q>Se rappeler des mots de passe pour les
-    sites qui en demandent</q> pour d&eacute;sactiver le gestionnaire de mots
-    de passe.</li>
+    d&eacute;s&eacute;lectionnez <q>Enregistrer les mots de passe</q> pour 
+    d&eacute;sactiver le gestionnaire de mots de passe.</li>
   </ol>
 
   <p>Pour activer le gestionnaire de mots de passe, suivez les &eacute;tapes 1
